# PSiO-Projekt

./: BigDemon.cpp  BigDemon.hpp  CMakeLists.txt  Constants.hpp  Enemy.cpp  Enemy.hpp  FixComments.cs  Game.cpp  Game.hpp  GameObject.hpp  GameState.hpp  GoblinAxe.cpp  GoblinAxe.hpp  Item.cpp  Item.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  README.md  Renderer.cpp  Renderer.hpp  ScoreBoard.cpp  ScoreBoard.hpp  SkeletonBow.cpp  SkeletonBow.hpp  SkeletonSword.cpp  SkeletonSword.hpp  SmallDemon.cpp  SmallDemon.hpp  SoundManager.cpp  SoundManager.hpp  check_colors.cs  check_image.cs  comments_list.txt  fix_comments.ps1  main.cpp  save1.txt  (+4 more)
build_test/: CMakeCache.txt
build_test2/: CMakeCache.txt
textures/CrystalLauncherN/: PRZECZYTAJ_TO.txt  crystal.clkey
textures/levels/: level1.txt  level2.txt
